--- a/config/src/main/resources/configurations/gateway-service.yml
+++ b/config/src/main/resources/configurations/gateway-service.yml
@@ -19,6 +19,10 @@ spring:
           uri: lb://core-service
           predicates:
             - Path=/api/v1/products/**, /api/v1/colors/**, /api/v1/categories/**
+        - id: user-service
+          uri: lb://user-service
+          predicates:
+            - Path=/api/v1/users/**
 
 eureka:
   instance:
